// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work Query all fields 1`] = `
Object {
  "data": Object {
    "work": Object {
      "abstract": Array [
        "Dummy The abstract",
      ],
      "creators": Array [
        Object {
          "display": "Dummy Jens Jensen",
          "nameSort": "Dummy Jensen Jens",
        },
        Object {
          "display": "Dummy Some Corporation",
          "nameSort": "Dummy Some Corporation for sorting",
        },
      ],
      "dk5MainEntry": Object {
        "code": "Dummy some dk5 code",
        "display": "Dummy some dk5 display",
        "dk5Heading": "Dummy some dk5 heading",
      },
      "fictionNonfiction": Object {
        "code": "FICTION",
        "display": "Dummy skønlitteratur",
      },
      "genreAndForm": Array [
        "Dummy some genre",
      ],
      "mainLanguages": Array [
        Object {
          "display": "Dummy dansk",
          "isoCode": "Dummy dan",
        },
      ],
      "manifestations": Object {
        "all": Array [
          Object {
            "pid": "Dummy some-pid-1",
          },
          Object {
            "pid": "Dummy some-pid-2",
          },
        ],
        "bestRepresentation": Object {
          "pid": "Dummy some-pid-1",
        },
        "first": Object {
          "pid": "Dummy some-pid-1",
        },
        "latest": Object {
          "pid": "Dummy some-pid-2",
        },
        "mostRelevant": Array [
          Object {
            "pid": "Dummy some-pid-2",
          },
          Object {
            "pid": "Dummy some-pid-1",
          },
        ],
      },
      "materialTypes": Array [
        Object {
          "general": "Dummy general type",
          "specific": "Dummy bog",
        },
      ],
      "series": Array [],
      "seriesMembers": Array [],
      "subjects": Object {
        "all": Array [],
        "dbcVerified": Array [],
      },
      "titles": Object {
        "full": Array [
          "Dummy Some Title: Full",
        ],
        "main": Array [
          "Dummy Some Title",
        ],
        "original": Array [
          "Dummy Some Title Origintal",
        ],
        "parallel": Array [
          "Dummy Parallel Title 1",
          "Dummy Parallel Title 2",
        ],
        "sort": "Dummy Some Title Sort",
        "standard": "Dummy Some Title Standard",
        "translated": Array [
          "Dummy Oversat titel",
        ],
      },
      "universe": Object {
        "title": "Dummy Some Universe",
      },
      "workId": "work-of:870970-basis:26521556",
      "workTypes": Array [
        "LITERATURE",
      ],
      "workYear": Object {
        "display": "Dummy",
        "endYear": 1951,
        "frequency": "1",
        "year": 1950,
      },
    },
  },
}
`;

exports[`Work fetch by faust 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by id 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by pid 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch multi by faust 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by id 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by pid 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;
